1999-06-14  Melissa Hirschl  <hershey@matisse.scriptics.com>

	* doc/StringObj.3
	* test/stringObj.test
	* unix/Makefile.in
	* win/Makefile.in
	* win/makefile.vc
	* generic/tclStringObj.c:
	Merged String and Unicode object types.  Added new functions to
	the puplic API:  Tcl_NewUnicodeObj, Tcl_SetUnicodeObj,
	Tcl_GetUnicode, Tcl_GetUniChar, Tcl_GetCharLength, Tcl_GetRange,
	Tcl_AppendUnicodeToObj.

1999-06-09    <stanton@scriptics.com>

	* generic/tclUnicodeObj.c: Lots of cleanup and simplification.
	Fixed several memory bugs.  Added TclAppendUnicodeToObj.  

	* generic/tclInt.h: Added declarations for various Unicode string
	functions.  

	* generic/tclRegexp.c: 
	* generic/tclCmdMZ.c: Changed to use new Unicode string interfaces
	for better performance. 
	
	* generic/tclRegexp.h: 
	* generic/tclRegexp.c: 
	* generic/tcl.h: 
	* generic/tcl.decls: Added Tcl_RegExpMatchObj and
	Tcl_RegExpGetInfo calls to access lower level regexp API.  These
	features are needed by Expect.  This is a preliminary
	implementation pending final review and cleanup.

	* generic/tclCmdMZ.c:
	* tests/string.test: Fixed bug where string map failed on null
	strings. 

	* generic/regexec.c: 
	* unix/tclUnixNotfy.c: lint

	* tools/genStubs.tcl: Changed to always write output in LF mode.

1999-06-08    <stanton@scriptics.com>

	* win/tclWinSock.c: Rolled back to the 8.1.0 implementation
	because of serious problems with the new driver.  Basically no
	incoming socket connections would be reported to a server port.
	The 8.1.1 code needs to be redesigned and fixed correctly.

1999-06-07  Melissa Hirschl  <hershey@matisse.scriptics.com>

	* tests/string.test: 
	* generic/tclVar.c (Tcl_SetVar2Ex):
	* generic/tclStringObj.c (Tcl_AppendObjToObj):
	* generic/tclCmdMZ.c (Tcl_StringObjCmd): optimized the string
	index, string length, string range, and append command in cases
	where the object's internal rep is a bytearray.  Objects with
	other internal reps are converted to have the new unicode internal